--- a/src/app/(home)/components/navigation/hamburgerButton/styles.module.scss
+++ b/src/app/(home)/components/navigation/hamburgerButton/styles.module.scss
@@ -1,7 +1,5 @@
-@use '../../../../../styles/breakpoints';
-
 .button {
-  @media all and (min-width: breakpoints.$desktop) {
+  @media all and (min-width: $desktop) {
     display: none;
   }
 }
