--- a/src/app/(home)/components/navigation/styles.module.scss
+++ b/src/app/(home)/components/navigation/styles.module.scss
@@ -1,5 +1,3 @@
-@use '../../../../styles/breakpoints';
-
 .navigationWrapper {
   z-index: var(--z-index-mobile-nav);
   inset: 0;
@@ -29,7 +27,7 @@
   padding: 1rem;
   background-color: var(--color-page);
 
-  @media (min-width: breakpoints.$desktop) {
+  @media (min-width: $desktop) {
     grid-template-columns: 1fr auto 1fr;
   }
 }
@@ -42,12 +40,12 @@
 .logInLink {
   display: none;
 
-  @media all and (min-width: breakpoints.$tablet) {
+  @media all and (min-width: $tablet) {
     display: block;
   }
 }
 
-@media all and (min-width: breakpoints.$desktop) {
+@media all and (min-width: $desktop) {
   .container {
     padding: 1rem 1.75rem;
   }
