--- a/src/app/(home)/components/trustedBy/styles.module.scss
+++ b/src/app/(home)/components/trustedBy/styles.module.scss
@@ -1,10 +1,8 @@
-@use '../../../../styles/breakpoints';
-
 .section {
   flex-direction: column;
   justify-content: center;
 
-  @media (min-width: breakpoints.$laptop) {
+  @media (min-width: $laptop) {
     flex-direction: row;
     justify-content: space-between;
   }
@@ -17,7 +15,7 @@
   font: var(--font-weight-regular) var(--font-size-100) / var(--line-height-100) var(--font-family-sans);
   letter-spacing: var(--letter-spacing-100);
 
-  @media (min-width: breakpoints.$laptop) {
+  @media (min-width: $laptop) {
     text-align: left;
     min-width: 20ch;
   }
@@ -32,7 +30,7 @@
   width: 100%;
   max-width: 360px;
 
-  @media (min-width: breakpoints.$tablet) {
+  @media (min-width: $tablet) {
     flex-wrap: nowrap;
     justify-content: space-between;
     max-width: 100%;
@@ -46,7 +44,7 @@
 .headspace {
   display: none;
 
-  @media (min-width: breakpoints.$laptop) {
+  @media (min-width: $laptop) {
     display: block;
   }
 }
@@ -54,7 +52,7 @@
 .perplexity, .vercel {
   display: none;
 
-  @media (min-width: breakpoints.$desktop) {
+  @media (min-width: $desktop) {
     display: block;
   }
 }
