--- a/src/app/(home)/index.scss
+++ b/src/app/(home)/index.scss
@@ -36,10 +36,15 @@
   --color-alpha-white-900: #fffffff2;
 
   --color-red-100: #fef3f1;
+  --color-red-200: #fdd3cd;
   --color-blue-100: #f2f9ff;
+  --color-blue-200: #cae4fa;
   --color-yellow-100: #fff5e0;
+  --color-yellow-200: #ffe4af;
   --color-gray-100: #fcfbfb;
+  --color-gray-200: #f6f5f4;
   --color-teal-100: #f2fafa;
+  --color-teal-200: #bde6e4;
 
   --color-page: var(--color-white);
 
