--- a/src/app/[id]/components/navigation/components/header/header.module.scss
+++ b/src/app/[id]/components/navigation/components/header/header.module.scss
@@ -1,5 +1,3 @@
-@use '../../../../../../styles/breakpoints';
-
 .container {
 	z-index: 1;
 	border-radius: 1rem;
@@ -29,7 +27,7 @@
 		fill: var(--faded-white-200);
 	}
 
-	@media all and (min-width: breakpoints.$tablet) {
+	@media all and (min-width: $tablet) {
 		font-size: 0.9rem;
 	}
 }
