--- a/src/app/[id]/components/navigation/components/homeLink/styles.module.scss
+++ b/src/app/[id]/components/navigation/components/homeLink/styles.module.scss
@@ -1,5 +1,3 @@
-@use '../../../../../../styles/breakpoints';
-
 .link {
 	font-weight: 500;
 	color: var(--color-gray);
@@ -10,7 +8,7 @@
 		font-weight: bold;
 	}
 
-	@media all and (min-width: breakpoints.$tablet) {
+	@media all and (min-width: $tablet) {
 		padding-left: 0.5rem;
 	}
 }
