--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -40,6 +40,7 @@
 
 	--letter-spacing-50: 0.0078125rem;
 	--letter-spacing-100: 0.0078125rem;
+	--letter-spacing-150: 0;
 	--letter-spacing-200: 0;
 	--letter-spacing-400: -0.015625rem;
 	--letter-spacing-500: -0.0390625rem;
@@ -49,6 +50,7 @@
 
 	--line-height-50: 1rem;
 	--line-height-100: 1.25rem;
+	--line-height-150: 1.25rem;
 	--line-height-200: 1.5rem;
 	--line-height-400: 1.75rem;
 	--line-height-500: 2rem;
