Start implementing a feature that allows to create elements on the page

--- a/src/app/[id]/[pageId]/components/pageEditor/styles.module.scss
+++ b/src/app/[id]/[pageId]/components/pageEditor/styles.module.scss
@@ -1,8 +1,10 @@
 .mainContent {
 	display: grid;
 	grid-template-columns: 10vw 1fr 10vw;
+	min-height: calc(100vh - var(--header-height));
+	cursor: text;
 }
 
-.contentHeader {
+.contentColumn {
 	grid-column: 2 / 3;
 }
