--- a/src/app/[id]/index.scss
+++ b/src/app/[id]/index.scss
@@ -26,6 +26,8 @@
 	--icon-fill-light: var(--white-800);
 
 	--button-hover: var(--faded-white-900);
+
+	--header-height: 3rem;
 }
 
 @media (prefers-color-scheme: dark) {
