--- a/src/app/[id]/[pageId]/styles.module.scss
+++ b/src/app/[id]/[pageId]/styles.module.scss
@@ -1,44 +1,6 @@
-.skeletonWrapper {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 100vh;
-
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -150%;
-    height: 100%;
-    width: 300%;
-    background: linear-gradient(90deg,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 0.203) 50%,
-        rgba(255, 255, 255, 0) 100%);
-    animation: shimmer 2s infinite;
-    pointer-events: none;
-  }
-}
-
-.skeletonBox {
-  background-color: #555555;
-  height: 20px;
-  margin-bottom: 12px;
-  border-radius: 4px;
-  position: relative;
-  overflow: hidden;
-
-  &.short {
-    width: 60%;
-  }
-}
-
-@keyframes shimmer {
-  0% {
-    left: -150%;
-  }
-
-  100% {
-    left: 100%;
-  }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
