Add a shimmer loader

--- a/src/app/[id]/components/editPageName/styles.module.scss
+++ b/src/app/[id]/components/editPageName/styles.module.scss
@@ -33,3 +33,9 @@
 	box-shadow: var(--faded-white-850) 0px 0px 0px 1px inset;
 	background: var(--faded-white-900);
 }
+
+.loader {
+	width: 8rem;
+	max-width: 24rem;
+	height: 1.5rem;
+}
