--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -218,6 +218,33 @@
   box-shadow: var(--shadow-100);
 }
 
+.shimmerLoader {
+  border-radius: 0.25rem;
+  background-image: linear-gradient(to right,
+      #1a1a1a 0%,
+      #2a2a2a 40%,
+      #444 50%,
+      #2a2a2a 60%,
+      #1a1a1a 100%);
+  background-repeat: no-repeat;
+  background-size: 800px 104px;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: shimmer;
+  animation-timing-function: linear;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -468px 0;
+  }
+
+  100% {
+    background-position: 468px 0;
+  }
+}
+
 // 0.5rem = 8px
 // 0.75rem = 12px
 // 0.875rem = 14px
