--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -228,11 +228,7 @@
       #1a1a1a 100%);
   background-repeat: no-repeat;
   background-size: 800px 104px;
-  animation-duration: 1.5s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-  animation-name: shimmer;
-  animation-timing-function: linear;
+  animation: shimmer 1.5s linear infinite forwards;
 }
 
 @keyframes shimmer {
