Add endpoints, add request handlers

--- a/src/app/[id]/[pageId]/styles.module.scss
+++ b/src/app/[id]/[pageId]/styles.module.scss
@@ -27,14 +27,14 @@
     background-size:
       550px 100%, // animation blur
       50px 20px,
-      30% 26px,
+      20rem 2.6rem,
     ;
 
     // left top
     background-position:
       -150% 0, // animation blur
       24px 24px,
-      60px 74px,
+      10vw 80px,
     ;
 
     background-repeat: no-repeat;
@@ -47,6 +47,6 @@
     background-position:
       100% 0, // animation blur
       24px 24px,
-      60px 74px,
+      10vw 80px,
   }
 }
