--- a/src/app/[id]/[pageId]/components/pageEditor/styles.module.scss
+++ b/src/app/[id]/[pageId]/components/pageEditor/styles.module.scss
@@ -1,6 +1,9 @@
 .mainContent {
+	--content-width: minmax(auto, 708px);
+	--margin-width: minmax(96px, 1fr);
+
 	display: grid;
-	grid-template-columns: 10vw 1fr 10vw;
+	grid-template-columns: var(--margin-width) var(--content-width) var(--margin-width);
 	min-height: calc(100vh - var(--header-height));
 	cursor: text;
 }
