--- a/src/app/[id]/[pageId]/components/blocks/textBlock/styles.module.scss
+++ b/src/app/[id]/[pageId]/components/blocks/textBlock/styles.module.scss
@@ -3,9 +3,9 @@
   width: 100%;
   padding: 3px 2px;
   padding-left: 0.2rem;
-  white-space: break-spaces;
+  flex-grow: 0;
+  caret-color: var(--faded-white-100);
   word-break: break-word;
-  caret-color: rgba(255, 255, 255, 0.81);
 
   &:focus {
     outline: none;
