--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -231,6 +231,21 @@
   animation: shimmer 1.5s linear infinite forwards;
 }
 
+.primaryButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  padding: 0.25rem;
+  border: none;
+  background: none;
+  transition: background 200ms;
+
+  &:hover {
+    background-color: var(--button-hover);
+  }
+}
+
 @keyframes shimmer {
   0% {
     background-position: -468px 0;
