--- a/src/app/[id]/[pageId]/components/blocks/textBlock/styles.module.scss
+++ b/src/app/[id]/[pageId]/components/blocks/textBlock/styles.module.scss
@@ -11,7 +11,12 @@
     outline: none;
   }
 
-  &[contenteditable][data-css-is-empty='true']:focus:after {
+  // &[contenteditable][data-css-is-empty='true']:focus:after {
+  //   content: attr(data-placeholder);
+  //   -webkit-text-fill-color: rgb(52 52 52);
+  // }
+
+  &[contenteditable][data-css-is-empty='true']:after {
     content: attr(data-placeholder);
     -webkit-text-fill-color: rgb(52 52 52);
   }
