Work on the order field, improve events in the page editor

--- a/src/app/[id]/components/editPageName/styles.module.scss
+++ b/src/app/[id]/components/editPageName/styles.module.scss
@@ -6,6 +6,7 @@
 	height: 1.75rem;
 	width: 1.75rem;
 	box-shadow: var(--faded-white-850) 0px 0px 0px 1px inset;
+	color: var(--faded-white-100);
 }
 
 .pageTitleBtn {
