--- a/src/app/[id]/[pageId]/components/blockActions/styles.scss
+++ b/src/app/[id]/[pageId]/components/blockActions/styles.scss
@@ -4,12 +4,10 @@
   top: 10%;
   display: flex;
   height: 100%;
-  visibility: hidden;
   transition: all 200ms ease-in-out;
   opacity: 0;
 
-  &--visible {
-    visibility: visible;
+  &--visible, &:hover {
     opacity: 1;
   }
 }
