Finish basic events in the page editor

--- a/src/app/[id]/[pageId]/components/blockActions/styles.scss
+++ b/src/app/[id]/[pageId]/components/blockActions/styles.scss
@@ -7,7 +7,7 @@
   transition: all 200ms ease-in-out;
   opacity: 0;
 
-  &--visible, &:hover {
+  &--visible, &:hover, &:focus-within {
     opacity: 1;
   }
 }
