--- a/src/app/[id]/[pageId]/components/blockOperations/styles.scss
+++ b/src/app/[id]/[pageId]/components/blockOperations/styles.scss
@@ -5,13 +5,13 @@
   z-index: 10;
 
   &__container {
-    display: flex;
-    align-items: center;
     position: relative;
-    flex-direction: row;
-    transform-origin: right 50%;
     right: 5px;
     top: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    transform-origin: right 50%;
     opacity: 1;
     transform: scaleX(1) scaleY(1);
     transition: opacity 200ms ease, transform 200ms ease;
@@ -108,14 +108,17 @@
     gap: 1px;
   }
 
-  &__option {
+  &__button {
     display: flex;
     align-items: center;
+    width: 100%;
     font-size: 14px;
     line-height: 120%;
     min-height: 28px;
     padding: 0 8px;
     border-radius: 6px;
+    background: none;
+    border: none;
     cursor: pointer;
     user-select: none;
     color: white;
