Add action buttons to the navigation

--- a/src/app/[id]/[pageId]/components/blockOperations/styles.scss
+++ b/src/app/[id]/[pageId]/components/blockOperations/styles.scss
@@ -136,7 +136,7 @@
     padding: 8px 4px;
     border-top: 1px solid rgba(255, 255, 255, 0.094);
     font-size: 12px;
-    color: rgba(255, 255, 255, 0.282);
+    color: var(--faded-white-400);
   }
 
   &__edited-by {
