Create a page not found page

--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -101,6 +101,10 @@
   text-overflow: ellipsis;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .rounded-sm {
   border-radius: var(--border-radius-sm);
 }
