--- a/src/app/editor/[pageId]/components/blockActions/styles.scss
+++ b/src/app/editor/[pageId]/components/blockActions/styles.scss
@@ -1,7 +1,7 @@
 .block__actions--container {
-  position: absolute;
-  right: 100%;
-  top: 10%;
+  // position: absolute;
+  // right: 100%;
+  // top: 10%;
   display: flex;
   height: 100%;
   transition: all 200ms ease-in-out;
