--- a/src/app/editor/[pageId]/components/blocks/textBlock/styles.module.scss
+++ b/src/app/editor/[pageId]/components/blocks/textBlock/styles.module.scss
@@ -6,18 +6,18 @@
   flex-grow: 0;
   caret-color: var(--faded-white-100);
   word-break: break-word;
+  user-select: none;
 
   &:focus {
     outline: none;
   }
 
-  // &[contenteditable][data-css-is-empty='true']:focus:after {
-  //   content: attr(data-placeholder);
-  //   -webkit-text-fill-color: rgb(52 52 52);
-  // }
-
   &[contenteditable][data-css-is-empty='true']:after {
     content: attr(data-placeholder);
     -webkit-text-fill-color: rgb(52 52 52);
   }
+}
+
+.selected {
+  border-left: 3px solid #007aff;
 }
