Work on login/register pages

--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -1,22 +1,3 @@
-// default flex values
-//  flex-direction: row;
-//  flex-wrap: nowrap;
-//  justify-content: flex-start;
-//  align-items: stretch;
-//  align-content: stretch;
-//  flex-basis: auto;
-//  flex-grow: 0;
-//  flex-shrink: 1;
-
-//  flex: 0 1 auto;
-//  align-self: auto;
-
-/* top and bottom | left and right */
-// padding: 5% 10%;
-
-/* top | right | bottom | left */
-// padding: 5px 1em 0 2em;
-
 .block {
   display: block;
 }
@@ -258,6 +239,10 @@
   100% {
     background-position: 468px 0;
   }
+}
+
+.button-disabled {
+  cursor: not-allowed;
 }
 
 // 0.5rem = 8px
