Adjust custom properties, install a next-themes package

--- a/src/app/editor/components/navigation/components/homeLink/styles.module.scss
+++ b/src/app/editor/components/navigation/components/homeLink/styles.module.scss
@@ -1,6 +1,6 @@
 .link {
 	font-weight: 500;
-	color: var(--color-gray);
+	color: var(--gray-500);
 
 	&[data-css-is-active='true'] {
 		background: var(--faded-white-900);
