--- a/src/app/editor/components/pageHeader/styles.module.scss
+++ b/src/app/editor/components/pageHeader/styles.module.scss
@@ -1,7 +1,7 @@
 .header {
 	height: var(--header-height);
 	box-shadow: var(--faded-white-850) 0px 0.25px 0px;
-	background: var(--color-page);
+	background: var(--background);
 	transition: box-shadow 300ms;
 }
 
