--- a/src/components/auth/form/styles.module.scss
+++ b/src/components/auth/form/styles.module.scss
@@ -20,7 +20,7 @@
 }
 
 .h1 {
-  color: var(--color-text-primary);
+  color: var(--foreground);
 }
 
 .h2 {
@@ -33,9 +33,8 @@
   padding: 0 0.75rem;
   border-radius: 0.25rem;
   border: none;
-  background: var(--color-white);
-  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px inset, rgba(15, 15, 15, 0.1) 0px 1px 2px;
-  color: var(--color-black);
+  background: var(--accent-background);
+  color: var(--accent-foreground);
   font-size: var(--font-size-100);
   font-weight: var(--font-weight-medium);
   white-space: nowrap;
