--- a/src/components/auth/input/styles.module.scss
+++ b/src/components/auth/input/styles.module.scss
@@ -1,7 +1,7 @@
 .inputWrapper {
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: start;
 }
 
 .input {
@@ -11,7 +11,8 @@
   border: none;
   box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px;
   border-radius: .25rem;
-  background: transparent;
+  background: var(--accent-background);
+  color: var(--accent-foreground);
   resize: none;
   font-size: var(--font-size-150);
   line-height: var(--line-height-300);
