Adjust the login form styles to modes

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -74,7 +74,11 @@
 	--faded-white-850: rgba(255, 255, 255, 0.094);
 	--faded-white-900: rgba(255, 255, 255, 0.055);
 
+	--gray-300: rgb(222, 222, 222);
 	--gray-500: rgb(155, 155, 155);
+
+	--white-100: rgb(255, 255, 255);
+	--white-100-faded: rgba(255, 255, 255, 0.764);
 	--white-300: rgb(237, 237, 237);
 
 	--background: var(--white-300);
