--- a/src/components/auth/input/styles.module.scss
+++ b/src/components/auth/input/styles.module.scss
@@ -1,25 +1,33 @@
 .inputWrapper {
   position: relative;
-  display: flex;
-  align-items: start;
 }
 
 .input {
   width: 100%;
   padding: 0.25rem .625rem;
   margin: 0.25rem 0 0.5rem 0;
-  border: none;
-  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px;
   border-radius: .25rem;
-  background: var(--accent-background);
-  color: var(--accent-foreground);
-  resize: none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
+  border: var(--gray-300) 1px solid;
+  background: var(--white-100);
   font-size: var(--font-size-150);
   line-height: var(--line-height-300);
+  transition: 200ms ease-in-out;
+
+  &:disabled {
+    opacity: 0.5;
+  }
+}
+
+:global(.dark) .input {
+  color: var(--accent-foreground);
+
+  &:focus-visible {
+    outline-offset: 3px;
+  }
 }
 
 .label {
-  color: var(--text-light-200);
-  font-size: var(--font-size-50);
+  font-size: var(--font-size-100);
   font-weight: var(--font-weight-medium);
 }
