--- a/src/components/auth/field/styles.module.scss
+++ b/src/components/auth/field/styles.module.scss
@@ -12,10 +12,17 @@
   background: var(--white-100);
   font-size: var(--font-size-150);
   line-height: var(--line-height-300);
-  transition: 200ms ease-in-out;
 
   &:disabled {
     opacity: 0.5;
+  }
+
+  &[aria-invalid="true"] {
+    border-color: var(--color-red-500);
+  }
+
+  &:focus-visible[aria-invalid="true"], &:focus[aria-invalid="true"] {
+    outline-color: var(--color-red-500);
   }
 }
 
@@ -23,6 +30,7 @@
   color: var(--accent-foreground);
 
   &:focus-visible {
+    outline-width: 1px;
     outline-offset: 3px;
   }
 }
@@ -30,4 +38,9 @@
 .label {
   font-size: var(--font-size-100);
   font-weight: var(--font-weight-medium);
+}
+
+.error {
+  color: var(--color-red-500);
+  font-size: var(--font-size-50);
 }
