--- a/src/components/auth/form/styles.module.scss
+++ b/src/components/auth/form/styles.module.scss
@@ -1,8 +1,4 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
   width: 100%;
   max-width: 480px;
   padding: 5rem 1rem 1rem 1rem;
@@ -46,7 +42,7 @@
   font-size: var(--font-size-100);
   font-weight: var(--font-weight-medium);
   white-space: nowrap;
-  transition: 200ms ease-in-out;
+  transition: background 200ms ease-in-out;
 
   &:hover {
     background: var(--white-100-faded);
