--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,5 @@
 @use './utils/utils';
+@use './utils/skeleton';
 
 :root {
 	--font-family-sans: NotionInter, Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
