Remove Notion logo

--- a/src/app/editor/components/navigation/components/pageGroup/styles.module.scss
+++ b/src/app/editor/components/navigation/components/pageGroup/styles.module.scss
@@ -65,6 +65,6 @@
 
 .noPagesText {
 	color: var(--faded-white-400);
-	font-weight: var(--font-weight-medium);
+	font-weight: var(--font-weight-500);
 	padding-left: 16px;
 }
