--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,14 +11,8 @@
 	--font-family-mono: "iA Writer Mono", Nitti, Menlo, Courier, monospace;
 	--font-family-emoji: "Apple Color Emoji", "Segoe UI Emoji", NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji", EmojiSymbols;
 
-	--shadow-bottom: 0 1px 2px #0001, 0 2px 4px #0002, 0 4px 8px #0003;
-	--shadow-100: 0px 3px 9px #00000008, 0px 0.7px 1.4625px rgba(0, 0, 0, .015);
-	--shadow-200: 0px 4px 18px #0000000a, 0px 2.025px 7.84688px rgba(0, 0, 0, .027), 0px 0.8px 2.925px #00000005, 0px 0.175px 1.04062px rgba(0, 0, 0, .013);
-	--shadow-300: 0px 36px 89px #0000000a, 0px 23.3333px 52.1227px #00000008, 0px 13.8667px 28.3481px rgba(0, 0, 0, .024), 0px 7.2px 14.4625px #00000005, 0px 2.93333px 7.25185px rgba(0, 0, 0, .016), 0px 0.666667px 3.50231px #00000003;
-	--shadow-filter: 0 4px 18px #0000004d;
-
-	--font-weight-regular: 400;
-	--font-weight-medium: 500;
+	--font-weight-400: 400;
+	--font-weight-500: 500;
 	--font-weight-semibold: 600;
 	--font-weight-bold: 700;
 
