--- a/src/app/editor/notFound.module.scss
+++ b/src/app/editor/notFound.module.scss
@@ -15,7 +15,7 @@
 
 .title {
   font-size: var(--font-size-200);
-  font-weight: var(--font-weight-medium);
+  font-weight: var(--font-weight-500);
 }
 
 .main {
@@ -42,7 +42,7 @@
   height: 2rem;
   margin-top: 1rem;
   font-size: var(--font-size-100);
-  font-weight: var(--font-weight-medium);
+  font-weight: var(--font-weight-500);
   line-height: 1.2;
   background: var(--black-700);
   border: 1px solid var(--faded-white-500);
