--- a/src/components/auth/field/styles.module.scss
+++ b/src/components/auth/field/styles.module.scss
@@ -37,7 +37,7 @@
 
 .label {
   font-size: var(--font-size-100);
-  font-weight: var(--font-weight-medium);
+  font-weight: var(--font-weight-500);
 }
 
 .error {
