--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -186,3 +186,26 @@
   overflow: hidden;
   white-space: nowrap;
 }
+
+.editorElement {
+  flex-grow: 0;
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  min-height: 21px;
+  padding: 3px 2px;
+  padding-left: 0.2rem;
+  border-radius: 4px;
+  word-break: break-word;
+  user-select: none;
+  color: inherit;
+
+  &:focus {
+    outline: none;
+  }
+
+  &[contenteditable][data-css-is-empty='true']:after {
+    content: attr(data-placeholder);
+    -webkit-text-fill-color: rgb(52 52 52);
+  }
+}
