Revert a change when sth is wrong

--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -199,6 +199,7 @@
   word-break: break-word;
   user-select: none;
   color: inherit;
+  font-weight: var(--font-weight-semibold);
 
   &:focus {
     outline: none;
